# ai-experimental-critic

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
demo_data/: proposal_1.json  proposal_2.json  proposal_3.json
examples/: example_usage.py
src/experimental_critic/: __init__.py  __main__.py  cli.py  core.py  schemas.py  utils.py
tests/: conftest.py  test_cli.py  test_core.py  test_smoke.py
