[project]
name = "ai-experimental-critic"
version = "0.1.0"
description = "Rule-based critique engine for experiment proposals identifying missing controls and biases"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Sean Liu", email = "sean.t.liu@gmail.com"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
ai-experimental-critic = "experimental_critic.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["experimental_critic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
